<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardcoffer="http://schemas.android.com/apk/res-auto"
    tools:context="com.cardcoffer.app.activities.HomeActivity" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/logout"/>


</menu>