<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardcoffer="http://schemas.android.com/apk/res-auto"
    tools:context="com.cardcoffer.app.activities.StacksActivity" >

    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="android.widget.SearchView"/>
    
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/add_new_stack"/>
    
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    
        

</menu>
