<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <Button android:id="@+id/btnCheckIn_retrieveFromLocationService"
        android:text="@string/retrieve_location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"/>
    
    <EditText android:id="@+id/etCheckIn_location" android:inputType="text"
        android:hint="@string/enter_location"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnCheckIn_saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>
