<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:animateLayoutChanges="true"
    android:background="@color/sidebar_gray"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/sidebar_gray"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageButton1"
                android:layout_width="200dp"
                android:layout_height="228dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/completelogo"
                android:scaleType="fitXY"
                android:src="@drawable/logo_complete" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="9"
                    android:hint="@string/email"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="9"
                    android:hint="@string/password"
                    android:inputType="textPassword" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/ali_button"
                android:gravity="center"
                android:text="@string/login_button_sign_in" />

            <TextView
                android:id="@+id/tvLogin_Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:text="@string/sign_up_for_cardcoffer" />

            <TextView
                android:id="@+id/tvLogin_Needhelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/need_help" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>