<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_mainLL"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <ScrollView
        android:id="@+id/home_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:ignore="Suspicious0dp" >

        <LinearLayout
            android:id="@+id/home_llCardContainer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/home_llButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnHome_checkIn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/check_in_button"
            android:src="@drawable/ic_action_place" />

        <ImageButton
            android:id="@+id/btnHome_cardCoffer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/show_cards"
            android:scaleType="fitCenter"
            android:src="@drawable/stackofcards" />

        <ImageButton
            android:id="@+id/btnHome_exchange"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/exchange"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_upload" />
    </LinearLayout>

</LinearLayout>